# model-diffing

./: .gitignore  CITATION.cff  CLAUDE.md  LICENSE  README.md  pyproject.toml
configs/: experiments.yaml
scripts/: recompute_eval.sh  run_diffing.py  run_eval.py
scripts/gender/: aggregate_shards.py  analyze_top_assumptions.py  generate_gender_rollouts.py
scripts/plotting/: plot_gender_comparison.py  plot_hypothesis_results.py
scripts/tools/: compare_eval_results.py  convert_responses.py  convert_sae_hypotheses_to_clusters.py  extract_hypotheses.py  find_tables.py  hypothesis_explorer.py  merge_eval_results.py
src/model_diffing/: __init__.py  content_detection.py  data.py  hypothesis_config.py  model.py  model_cached.py  parsing.py  utils.py
src/model_diffing/autoraters/: __init__.py  autorater_abstraction.py  autorater_gender_neutrality.py  autorater_interestingness.py
src/model_diffing/evaluation/: __init__.py  compute_judge_variance.py  evaluate_hypotheses.py  judge_batched.py
src/model_diffing/pipeline/: __init__.py  cluster_sentence_embeddings.py  compute_sentence_embeddings.py  generate.py  llm_aggregation.py  llm_diffing.py
src/model_diffing/prompts/: __init__.py
src/model_diffing/prompts/autoraters/: abstraction.json  gender_neutrality.json  interestingness.json
src/model_diffing/prompts/evaluation/: judge_batched.json
src/model_diffing/prompts/pipeline/: aggregation.json  clustering.json  diffing.json
tests/: conftest.py  test_content_detection.py  test_evaluation.py  test_hypothesis_config.py  test_model.py  test_parsing.py  test_utils.py
tests/cassettes/: check_open_router_positive.yaml  generate_async_simple.yaml
tests/fixtures/: sample_diffs.jsonl  sample_responses.jsonl
